<resources>
    <string name="app_name">Walk Of Interest</string>
    <string name="preference_mode">Preference Mode</string>
    <string name="on_foot">On foot</string>
    <string name="to_location">To</string>
    <string name="from">From:</string>
    <string name="image_more">more</string>
    <string name="image_steps">steps</string>
    <string name="info">info</string>
    <string name="scroll_view_routes">scrollViewRoutes</string>
    <string name="from_location">From</string>
    <string name="to2">To:</string>
    <string name="next">Next</string>
    <string name="nature">Nature</string>
    <string name="checknature">CheckNature</string>
    <string name="item_category">item category</string>
    <string name="profile_button_back">Button back</string>
    <string name="profile_button_profile">button profile</string>
    <string name="description_splash_screen">Walk with your route</string>
    <string name="made_by_artemalo">Made by ARTEMALO</string>
    <string name="contentDescription_image_logo">logo</string>
    <string name="profile_button_edit">edit</string>
    <string name="username">Username</string>
    <string name="profile_image_profile">image profile</string>
    <string name="profile_button_history">profile_button_history</string>
    <string name="text_button_history">Routes history</string>
    <string name="text_button_favorite">Favorite routes</string>
    <string name="profile_button_favorite">profile_button_favorite</string>
    <string name="text_login">Login</string>
    <string name="text_access_account">Access account</string>
    <string name="input_email">input email</string>
    <string name="text_password">Password</string>
    <string name="text_email">E-mail</string>
    <string name="text_forgot_password">forgot password</string>
    <string name="click_text_donthaveanaccount">Don\'t have an account? <b>Register</b></string>
    <string name="text_singup">SingUp</string>
    <string name="text_welcome_to">Welcome to Walk Of Interest</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_confirm_password">Confirm the password</string>
    <string name="vision_on">vision on</string>
    <string name="vision_off">vision off</string>
    <string name="text_your_username">your username</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="click_text_alreadyamember">Already a member? <b>Sign in</b></string>
    <string name="text_button_add_favorite">Add favorite</string>
    <string name="cancel">cancel</string>
    <string name="address">Address</string>
    <string name="contentDescription_NumPicker">Number for hour</string>
    <string name="contentText_switcher">switcher</string>
    <string name="contentDescription_from">From location</string>
    <string name="contentDescription_to">Location to</string>
    <string name="current_location">Current location</string>
    <string name="select_on_map">Select on map</string>
    <string name="txt_btn_cancel">Cancel</string>
    <string name="error_permission_map">Error permission</string>

    <string-array name="categories_name">
        <item>Nature</item>
        <item>History</item>
        <item>Culture</item>
        <item>Food</item>
        <item>Quiet places, parks</item>
        <item>Structures</item>
        <item>Active leisure</item>
    </string-array>

    <string-array name="categories_description">
        <item>Прогулки по паркам, лесам, заповедникам, набережным и другим природным зонам.</item>
        <item>Маршруты по местам с исторической ценностью, включая древние здания, памятники, музеи и архитектурные достопримечательности.</item>
        <item>Прогулки по местам, связанным с культурой: театры, галереи, выставочные залы, концертные площадки и другие культурные объекты.</item>
        <item>Кафе, рестораны, уличная едой, где можно попробовать местные блюда и напитки.</item>
        <item>Прогулки, подходящие для семей с детьми, включающие парки с детскими площадками, безопасные тропинки и места для пикников.</item>
        <item>Различным районы города, чтобы лучше узнать местный колорит, архитектуру и атмосферу.</item>
        <item>Тропы и дорожки, подходящие для тех, кто предпочитает бег и другой активный отдых.</item>
    </string-array>
</resources>