<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_alpha">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/from"
                android:textColor="@color/white_alpha" />

            <TextView
                android:id="@+id/textCurrentLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_location"
                android:textColor="@color/black_alpha"
                app:layout_constrainedWidth="true"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/to"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to2"
                app:layout_constrainedWidth="true"
                android:singleLine="true"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>