<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_theme">

    <include layout="@layout/back_and_profile" />

    <LinearLayout
        android:id="@+id/from_to_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_profile"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/linearLayoutFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textSize="@dimen/text_14sp"
                android:text="@string/from"
                android:textColor="@color/text_gray" />
            <TextView
                android:id="@+id/textCurrentLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_14sp"
                android:text="@string/current_location"
                android:textColor="@color/text_gray"
                app:layout_constrainedWidth="true"
                android:singleLine="true"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_end"
            android:gravity="start"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textSize="@dimen/text_14sp"
                android:text="@string/to"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/textTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_14sp"
                android:text="@string/to2"
                android:textColor="@color/white"
                app:layout_constrainedWidth="true"
                android:singleLine="true"/>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_top"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/from_to_info">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCategories"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/buttonNext">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchPreference"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/margin_start_end"
                android:checked="false"
                android:theme="@style/theme_switch"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_top"
                android:text="@string/preference_mode"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/switchPreference"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/on_foot"
                android:src="@drawable/directions_walk"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_start_end"
                android:text="@string/on_foot"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/buttonNext"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_fix"
            android:layout_marginTop="@dimen/margin_start_end"
            android:layout_marginBottom="@dimen/margin_start_end"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/round_button_background">

            <android.widget.Button
                style="@style/ButtonNext"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/next_button"
                android:layout_gravity="center"
                android:clickable="false"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textSize="@dimen/text_14sp" />
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>